--- a/src/view/ArtikelSuche.form
+++ b/src/view/ArtikelSuche.form
@@ -78,10 +78,12 @@
                   <EmptySpace min="-2" pref="4" max="-2" attributes="0"/>
                   <Component id="jSeparator7" min="-2" pref="10" max="-2" attributes="0"/>
                   <EmptySpace min="-2" pref="38" max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="jcbArtikelID_ArtikelSuche" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="0" attributes="0">
                       <Component id="jbSuchen_ArtikelSuche" alignment="1" min="-2" pref="25" max="-2" attributes="0"/>
-                      <Component id="jtfSuchkriterium_ArtikelSuche" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="jcbArtikelID_ArtikelSuche" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
+                          <Component id="jtfSuchkriterium_ArtikelSuche" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
+                      </Group>
                   </Group>
                   <EmptySpace min="-2" pref="37" max="-2" attributes="0"/>
                   <Component id="jScrollPane3" min="-2" max="-2" attributes="0"/>
