--- a/src/view/KundeAnlegen.form
+++ b/src/view/KundeAnlegen.form
@@ -42,7 +42,7 @@
           <Group type="103" rootIndex="1" groupAlignment="0" attributes="0">
               <Group type="102" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
-                  <Component id="KundeAnlegen" pref="668" max="32767" attributes="0"/>
+                  <Component id="KundeAnlegen" pref="672" max="32767" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
               </Group>
           </Group>
@@ -104,7 +104,7 @@
                           </Group>
                       </Group>
                   </Group>
-                  <EmptySpace pref="33" max="32767" attributes="0"/>
+                  <EmptySpace max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -818,6 +818,9 @@
             </Property>
             <Property name="text" type="java.lang.String" value="Speichern"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jbSpeichernActionPerformed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
