--- a/src/view/AuftragBearbeiten.form
+++ b/src/view/AuftragBearbeiten.form
@@ -70,7 +70,9 @@
                               <Component id="jLabel87" min="-2" max="-2" attributes="0"/>
                               <EmptySpace min="-2" pref="65" max="-2" attributes="0"/>
                               <Component id="jtfAuftragsID_AuftragBearbeiten" min="-2" pref="150" max="-2" attributes="0"/>
-                              <EmptySpace min="-2" pref="139" max="-2" attributes="0"/>
+                              <EmptySpace min="-2" pref="27" max="-2" attributes="0"/>
+                              <Component id="jbSuchen_AuftragBearbeiten" min="-2" pref="100" max="-2" attributes="0"/>
+                              <EmptySpace type="unrelated" max="-2" attributes="0"/>
                               <Component id="jbLöschenAuftragBearbeiten" min="-2" pref="130" max="-2" attributes="0"/>
                               <EmptySpace type="unrelated" max="-2" attributes="0"/>
                               <Component id="jbBearbeitenAuftragBearbeiten" min="-2" pref="130" max="-2" attributes="0"/>
@@ -100,6 +102,7 @@
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="jLabel87" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="jtfAuftragsID_AuftragBearbeiten" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
+                      <Component id="jbSuchen_AuftragBearbeiten" alignment="3" min="-2" pref="35" max="-2" attributes="0"/>
                       <Component id="jbLöschenAuftragBearbeiten" alignment="3" min="-2" pref="35" max="-2" attributes="0"/>
                       <Component id="jbBearbeitenAuftragBearbeiten" alignment="3" min="-2" pref="35" max="-2" attributes="0"/>
                   </Group>
@@ -110,7 +113,7 @@
                       <Component id="jbAbbrechen_AuftragBearbeiten" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
                       <Component id="jbSpeichernAuftragBearbeiten" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace pref="36" max="32767" attributes="0"/>
+                  <EmptySpace pref="26" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -139,6 +142,17 @@
           </Events>
         </Component>
         <Component class="javax.swing.JSeparator" name="jSeparator10">
+        </Component>
+        <Component class="javax.swing.JButton" name="jbSuchen_AuftragBearbeiten">
+          <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Tahoma" size="16" style="0"/>
+            </Property>
+            <Property name="text" type="java.lang.String" value="Suchen"/>
+          </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jbSuchen_AuftragBearbeitenActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel87">
           <Properties>
@@ -171,9 +185,6 @@
             </Property>
             <Property name="text" type="java.lang.String" value="L&#xf6;schen"/>
           </Properties>
-          <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jbL&#xf6;schenAuftragBearbeitenActionPerformed"/>
-          </Events>
         </Component>
         <Container class="javax.swing.JPanel" name="jpUnterPanel_AuftragBearbeiten">
           <Properties>
