--- a/src/view/ArtikelAnlegen.form
+++ b/src/view/ArtikelAnlegen.form
@@ -73,7 +73,7 @@
                           </Group>
                       </Group>
                   </Group>
-                  <EmptySpace min="22" pref="133" max="32767" attributes="0"/>
+                  <EmptySpace min="22" pref="135" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -98,7 +98,7 @@
                       <Component id="jbSpeichern_ArtikelAnlegen" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
                       <Component id="jbAbbrechen_ArtikelAnlegen" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace pref="60" max="32767" attributes="0"/>
+                  <EmptySpace pref="69" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -603,11 +603,12 @@
               <Properties>
                 <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
                   <StringArray count="3">
-                    <StringItem index="0" value=""/>
-                    <StringItem index="1" value="7"/>
-                    <StringItem index="2" value="19"/>
+                    <StringItem index="0" value="Bitte ausw&#xe4;hlen"/>
+                    <StringItem index="1" value="19"/>
+                    <StringItem index="2" value="7"/>
                   </StringArray>
                 </Property>
+                <Property name="toolTipText" type="java.lang.String" value=""/>
                 <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
                   <Dimension value="[37, 25]"/>
                 </Property>
