--- a/src/view/KundeAnlegen.form
+++ b/src/view/KundeAnlegen.form
@@ -31,22 +31,21 @@
               <Component id="KundeAnlegen" min="-2" pref="950" max="-2" attributes="0"/>
               <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
           </Group>
+          <Group type="103" rootIndex="1" groupAlignment="0" attributes="0">
+              <EmptySpace min="0" pref="950" max="32767" attributes="0"/>
+          </Group>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
-<<<<<<< HEAD
-          <Component id="KundeAnlegen" alignment="0" pref="696" max="32767" attributes="0"/>
-=======
           <EmptySpace min="0" pref="680" max="32767" attributes="0"/>
           <Group type="103" rootIndex="1" groupAlignment="0" attributes="0">
               <Group type="102" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
-                  <Component id="KundeAnlegen" pref="662" max="32767" attributes="0"/>
+                  <Component id="KundeAnlegen" pref="684" max="32767" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
               </Group>
           </Group>
->>>>>>> origin/duygu
       </Group>
     </DimensionLayout>
   </Layout>
@@ -69,26 +68,6 @@
                           <EmptySpace type="separate" max="-2" attributes="0"/>
                           <Component id="abbrechen_KundeAnlegen" min="-2" pref="130" max="-2" attributes="0"/>
                       </Group>
-<<<<<<< HEAD
-                      <Group type="103" groupAlignment="0" attributes="0">
-                          <Group type="102" alignment="0" attributes="0">
-                              <EmptySpace min="-2" pref="395" max="-2" attributes="0"/>
-                              <Component id="jLabel14" min="-2" max="-2" attributes="0"/>
-                          </Group>
-                          <Group type="102" alignment="0" attributes="0">
-                              <EmptySpace max="-2" attributes="0"/>
-                              <Group type="103" groupAlignment="0" attributes="0">
-                                  <Group type="102" alignment="0" attributes="0">
-                                      <Group type="103" groupAlignment="0" attributes="0">
-                                          <Component id="jLabel148" min="-2" max="-2" attributes="0"/>
-                                          <Component id="jLabel147" min="-2" max="-2" attributes="0"/>
-=======
-                      <Group type="102" alignment="1" attributes="0">
-                          <EmptySpace min="0" pref="728" max="32767" attributes="0"/>
-                          <Component id="jbSpeichern" min="-2" pref="130" max="-2" attributes="0"/>
-                          <EmptySpace type="separate" max="-2" attributes="0"/>
-                          <Component id="abbrechen_KundeAnlegen" min="-2" pref="130" max="-2" attributes="0"/>
-                      </Group>
                       <Group type="103" alignment="1" groupAlignment="0" attributes="0">
                           <Group type="102" alignment="0" attributes="0">
                               <EmptySpace min="-2" pref="311" max="-2" attributes="0"/>
@@ -106,42 +85,26 @@
                                       <Group type="103" groupAlignment="1" attributes="0">
                                           <Component id="jLabel148" alignment="1" min="-2" max="-2" attributes="0"/>
                                           <Component id="jLabel147" alignment="1" min="-2" max="-2" attributes="0"/>
->>>>>>> origin/duygu
                                       </Group>
                                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
                                       <Group type="103" groupAlignment="0" max="-2" attributes="0">
                                           <Component id="jtfGPID_KundeAnlegen" alignment="0" min="-2" pref="150" max="-2" attributes="0"/>
                                           <Component id="jtfKreditlimit_KundenAnlegen" alignment="0" min="-2" pref="150" max="-2" attributes="0"/>
                                       </Group>
-<<<<<<< HEAD
-                                  </Group>
-                                  <Group type="102" alignment="0" attributes="0">
-                                      <Component id="jrbLieferadresseIdentisch_KundeAnlegen" min="-2" max="-2" attributes="0"/>
-                                      <EmptySpace type="separate" max="-2" attributes="0"/>
-                                      <Component id="jrbAbweichendeLieferadresse_KundeAnlegen" min="-2" max="-2" attributes="0"/>
-=======
->>>>>>> origin/duygu
                                   </Group>
                               </Group>
                           </Group>
                           <Group type="102" alignment="0" attributes="0">
                               <EmptySpace max="-2" attributes="0"/>
-<<<<<<< HEAD
-                              <Component id="jPKontakt" min="-2" pref="252" max="-2" attributes="0"/>
-                              <EmptySpace max="-2" attributes="0"/>
-                              <Component id="jPRechnungsdaten" min="-2" max="-2" attributes="0"/>
-                              <EmptySpace max="-2" attributes="0"/>
-=======
                               <Component id="jPKontakt" min="-2" max="-2" attributes="0"/>
                               <EmptySpace type="separate" min="-2" max="-2" attributes="0"/>
                               <Component id="jPRechnungsdaten" min="-2" max="-2" attributes="0"/>
                               <EmptySpace type="separate" max="-2" attributes="0"/>
->>>>>>> origin/duygu
                               <Component id="jPLieferdaten" min="-2" max="-2" attributes="0"/>
                           </Group>
                       </Group>
                   </Group>
-                  <EmptySpace pref="26" max="32767" attributes="0"/>
+                  <EmptySpace pref="13" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -241,6 +204,9 @@
               <Font name="Tahoma" size="14" style="0"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jtfKreditlimit_KundenAnlegenActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JRadioButton" name="jrbLieferadresseIdentisch_KundeAnlegen">
           <Properties>
@@ -509,6 +475,9 @@
                   </StringArray>
                 </Property>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jcbAnredeRG_KundeAnlegenActionPerformed"/>
+              </Events>
               <AuxValues>
                 <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
               </AuxValues>
@@ -657,7 +626,7 @@
                               </Group>
                               <EmptySpace max="32767" attributes="0"/>
                               <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                                  <Component id="jComboBox1" alignment="0" min="-2" pref="190" max="-2" attributes="0"/>
+                                  <Component id="jcbAnredeLD_KundeAnlegen" alignment="0" min="-2" pref="190" max="-2" attributes="0"/>
                                   <Component id="jtfName2_KundeAnlegen" alignment="0" min="-2" pref="190" max="-2" attributes="0"/>
                                   <Component id="jtfVorname2_KundeAnlegen" alignment="0" min="-2" pref="190" max="-2" attributes="0"/>
                                   <Component id="jtfFirma2_KundeAnlegen" alignment="0" min="-2" pref="190" max="-2" attributes="0"/>
@@ -687,7 +656,7 @@
                       <EmptySpace min="-2" pref="17" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="jLabel159" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="jComboBox1" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
+                          <Component id="jcbAnredeLD_KundeAnlegen" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
@@ -733,7 +702,7 @@
                 <Property name="text" type="java.lang.String" value="Anrede"/>
               </Properties>
             </Component>
-            <Component class="javax.swing.JComboBox" name="jComboBox1">
+            <Component class="javax.swing.JComboBox" name="jcbAnredeLD_KundeAnlegen">
               <Properties>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Tahoma" size="14" style="0"/>
@@ -855,6 +824,9 @@
             </Property>
             <Property name="text" type="java.lang.String" value="Speichern"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jbSpeichernActionPerformed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
